// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps maps source to visibleLayer from state, if any 1`] = `
Object {
  "source": "layer1",
}
`;

exports[`mapStateToProps source uses call to defaultLayerSource() if neither default layer nor visible layer is available 1`] = `
Object {
  "source": undefined,
}
`;

exports[`mapStateToProps source uses given default layer if no visible layer in state 1`] = `
Object {
  "source": "layer2",
}
`;
